--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "npm": "6.14.13"
   },
   "scripts": {
-    "build": "npm client install && npm client build",
+    "build": "yarn --cwd client install && yarn --cwd client build",
     "deploy": "cp -a client/build/. public/",
-    "heroku-postbuild": "npm build && npm deploy"
+    "heroku-postbuild": "yarn build && yarn deploy"
   }
 }
